Closed Bug 1905065 Opened 3 months ago Closed 3 months ago

IA2_TEXT_OFFSET_CARET should return nothing for IA2_TEXT_BOUNDARY_CHAR when caret at end of line

Categories

(Core :: Disability Access APIs, defect)

defect

Tracking

()

RESOLVED FIXED
129 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox127 --- unaffected
firefox128 --- fixed
firefox129 --- fixed

People

(Reporter: Jamie, Assigned: Jamie)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(3 files)

STR (with NVDA alpha):

  1. Open this test case:
    data:text/html,<textarea cols="2">ab cd</textarea>
  2. Focus the textarea.
  3. Press the end key.
    • Expected: NVDA says "blank"
    • Actual: NVDA says "c"

I fixed this as part of bug 1901457. However, I didn't realise at the time that this regression would have impact beyond that bug.

Set release status flags based on info from the regressing bug 855184

However, we should not land this on beta without bug 1905021 as well because this bug 1905065 is preventing that more egregious bug from happening on beta. 😩

Edit: Actually, bug 1905021 existed long before Firefox 128, so we can address it separately on its own merits.

Depends on: 1905021
Blocks: texta11y
See Also: → 1901457

We already did this for BOUNDARY_CHAR, but i neglected to update this for cluster in bug 855184.
Without this, FindBoundary with BOUNDARY_CLUSTER on a caret TextLeafPoint when the caret is at the end of a line would return the last cluster instead of no character.

Attachment #9410075 - Flags: approval-mozilla-beta?
No longer depends on: 1905021

beta Uplift Approval Request

  • User impact if declined: Incorrect character read by some screen readers when moving to the end of a line.
  • Code covered by automated testing: yes
  • Fix verified in Nightly: yes
  • Needs manual QE test: no
  • Steps to reproduce for manual QE testing: NA
  • Risk associated with taking this patch: low
  • Explanation of risk level: Very simple patch covered by automated tests.
  • String changes made/needed: none
  • Is Android affected?: no
Attached file Bug 1905065: Add test.
Keywords: leave-open
Keywords: leave-open
Attachment #9410346 - Flags: approval-mozilla-beta?

beta Uplift Approval Request

  • User impact if declined: None. This is just an automated test for the first patch on this bug.
  • Code covered by automated testing: yes
  • Fix verified in Nightly: yes
  • Needs manual QE test: no
  • Steps to reproduce for manual QE testing: NA
  • Risk associated with taking this patch: low
  • Explanation of risk level: Test only.
  • String changes made/needed: none
  • Is Android affected?: no
Status: NEW → RESOLVED
Closed: 3 months ago
Depends on: 1901457
Flags: in-testsuite+
Resolution: --- → FIXED
See Also: 1901457
Target Milestone: --- → 129 Branch
Attachment #9410075 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Attachment #9410346 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: